# whisper

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/audio/: mod.rs
src/cli/: mod.rs
src/client/: mod.rs
src/crypto/: mod.rs  ratchet.rs  safety_number.rs
src/protocol/: mod.rs
src/relay/: mod.rs
src/screen/: capture.rs  mod.rs  viewer.rs
src/storage/: mod.rs
src/tui/: calls.rs  commands.rs  files.rs  groups.rs  helpers.rs  mod.rs  render.rs  screen_share.rs  types.rs
