[package]
name = "whisper"
version = "0.1.0"
edition = "2021"
authors = ["Bentlybro <github@bentlybro.com>"]
description = "🔒 Zero-knowledge E2EE terminal chat — ephemeral, encrypted, no metadata"
license = "MIT"
repository = "https://github.com/Bentlybro/whisper"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Cryptography
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"
blake3 = "1"
zeroize = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
chrono = "0.4"
base64 = "0.22"
hex = "0.4"
futures-util = "0.3"
rpassword = "7"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "whisper"
path = "src/main.rs"
