[package]
name = "wsp"
version = "0.1.0"
edition = "2021"
authors = ["Bentlybro <github@bentlybro.com>"]
description = "🔒 Zero-knowledge E2EE terminal chat — ephemeral, encrypted, no metadata"
license = "MIT"
repository = "https://github.com/Bentlybro/wsp"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Cryptography
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"
blake3 = "1"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Audio (voice calls)
cpal = "0.15"
audiopus = "0.3.0-rc.0"

# Screen sharing
scrap = "0.5"
minifb = "0.28"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Utilities
chrono = "0.4"
base64 = "0.22"
hex = "0.4"
futures-util = "0.3"
rpassword = "7"
rmp-serde = "1.3.1"
nnnoiseless = { version = "0.5.2", default-features = false }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "wsp"
path = "src/main.rs"
